--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,4 @@
-{\rtf1\ansi\ansicpg1252\cocoartf1504
-{\fonttbl\f0\fmodern\fcharset0 Courier;}
-{\colortbl;\red255\green255\blue255;\red14\green14\blue14;\red255\green255\blue255;\red14\green114\blue164;
-}
-{\*\expandedcolortbl;\csgray\c100000;\cssrgb\c6667\c6667\c6667;\cssrgb\c100000\c100000\c100000;\cssrgb\c0\c52549\c70196;
-}
-\paperw11900\paperh16840\margl1440\margr1440\vieww10800\viewh8400\viewkind0
-\deftab720
-\pard\pardeftab720\partightenfactor0
-
-\f0\fs26 \cf2 \cb3 \expnd0\expndtw0\kerning0
-language: objective-c\
-\
-branches:\
- only:\
- - master\
-\
-xcode_workspace: logTracker.xcworkspace\
-xcode_scheme:	Pods-logTracker_Tests\
-osx_image: xcode8.3\
-xcode_sdk: iphonesimulator8.3\
-\
-script:\
-- xcodebuild clean build \cf4 test\cf2  -project \cf2 \cb3 logTracker.xcworkspace\cf2 \cb3  -scheme \cf2 \cb3 Pods-logTracker_Tests}
+language: objective-c
+xcode_workspace: logTracker.xcworkspace # path to your xcodeproj folder
+xcode_scheme: Pods-logTracke_Tests
+osx_image: xcode8.3
