--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,16 @@
 language: objective-c
 xcode_workspace: logTracker.xcworkspace # path to your xcodeproj folder
 xcode_scheme: Pods-logTracke_Tests
-osx_image: xcode8.3
+osx_image: xcode8.2
+
+branches:
+    only:
+        - master
+
+before_install:
+    - pod install
+    - rvm install ruby-2.2.2
+    - gem install cocoapods
+
+script:
+     - xcodebuild -workspace logTracker.xcworkspace -scheme Pods-logTracke_Tests -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty -c
